--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,26 @@
+/*variaveis css*/
+:root {
+  --vermelho: #E50914;
+  --preta: #141414;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;/*limite é a borda da caixa*/
+}
+
 body {
-  
+  background: var(--preta);
+  font-family: 'Times New Roman', Times, serif;
+}
+
+header .container {
+
+}
+
+header .logo {
+  color: var(--vermelho);
+  font-family: 'Arial Black', Times;
+  font-size: 40px;
 }
