--- a/style/main.css
+++ b/style/main.css
@@ -24,3 +24,13 @@ header .logo {
   font-family: 'Arial Black', Times;
   font-size: 40px;
 }
+
+header nav a {
+  text-decoration: none;
+  color: #AAA;
+  margin-right: 10px;
+}
+
+header nav a:hover {
+  color: #fff;
+}
