--- a/style/main.css
+++ b/style/main.css
@@ -23,6 +23,7 @@ header .container {
 }
 
 header .logo {
+  margin-left: 5px;
   color: var(--vermelho);
   font-family: 'Arial Black', Times;
   font-size: 40px;
