--- a/style/main.css
+++ b/style/main.css
@@ -49,4 +49,8 @@ header nav a:hover {
    um tom de transparencia escura*/
   height: 400px;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;/*elementos devem comear sempre da esquerda*/
 }
