--- a/style/main.css
+++ b/style/main.css
@@ -54,3 +54,7 @@ header nav a:hover {
   justify-content: center;
   align-items: flex-start;/*elementos devem comear sempre da esquerda*/
 }
+
+.filme-principal .descricao{
+  margin-bottom: 40px;
+}
