--- a/style/main.css
+++ b/style/main.css
@@ -86,4 +86,13 @@ header nav a:hover {
 
 .botao i {
   margin-right: 8px;
+} 
+
+/*classe wrapper/container*/
+.container {
+  margin-left: 20px;
+}
+
+.filme-principal .container {
+  width: 70%;
 }
